<resources>
    <string name="app_name">Analytic Hierarchy Process</string>
    <string name="information">Information</string>
    <string name="importance">Importance</string>
    <string name="rating">Rating</string>
    <string name="info_table_10">Extreme</string>
    <string name="info_table_11">9</string>
    <string name="info_table_20">Very strong to extremely</string>
    <string name="info_table_21">8</string>
    <string name="info_table_30">Very strong</string>
    <string name="info_table_31">7</string>
    <string name="info_table_40">Strongly to very strong</string>
    <string name="info_table_41">6</string>
    <string name="info_table_50">Strong</string>
    <string name="info_table_51">5</string>
    <string name="info_table_60">Moderately to strong</string>
    <string name="info_table_61">4</string>
    <string name="info_table_70">Moderate</string>
    <string name="info_table_71">3</string>
    <string name="info_table_80">Equally to moderately</string>
    <string name="info_table_81">2</string>
    <string name="info_table_90">Equal</string>
    <string name="info_table_91">1</string>
    <string name="criterion">Criterion</string>
    <string name="value">Value</string>
    <string name="priority">Priority</string>
    <string name="add_criterion">Add Criterion</string>
    <string name="new_analyze">New analyze</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="calculate">Calculate</string>
    <string name="criteria">Criteria</string>
    <string name="normal">Normal</string>
    <string name="reciprocal">Reciprocal</string>
    <string name="consistency_ratio">Consistency Ratio</string>
    <string name="zero_percentage">0.00%</string>
    <string name="results">Results</string>
    <string name="consistent">Consistent</string>
    <string name="not_consistent">Not consistent</string>
    <string name="warning_empty_criterion">Please enter a criterion</string>
    <string name="warning_criterion_exists">This criterion already exists</string>
    <string name="warning_no_criterion">You must enter criteria first</string>
    <string name="warning_need_two_criteria">There must be at least two criteria</string>
    <string name="alternative">Alternative</string>
    <string name="alternatives">Alternatives</string>
    <string name="add_alternative">Add Alternative</string>
    <string name="warning_alternative_exists">This alternative already exists</string>
    <string name="warning_no_alternative">You must enter alternatives first</string>
    <string name="warning_need_two_alternatives">There must be at least two alternatives</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
</resources>
