<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/results"
        android:textSize="42sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="20sp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_weight="1"
            android:text="@string/consistency_ratio"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewConsistencyRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/zero_percentage"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewConsistency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:gravity="center_horizontal|end"
        android:text="@string/consistent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/alternative"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorLighterGray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:gravity="end"
            android:text="@string/priority"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/buttonResultExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="70dp"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonResultBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="70dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    </LinearLayout>
</LinearLayout>