<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="60dp" android:paddingStart="60dp"
        android:paddingRight="10dp" android:paddingEnd="10dp">

    <TextView
            android:text="@string/criterion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewItemName"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>
    <Switch
            android:text="@string/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchReciprocal" android:layout_toStartOf="@+id/editTextRating"
            android:layout_marginRight="20dp" android:layout_marginEnd="20dp"
            android:layout_toLeftOf="@+id/editTextRating" android:layout_centerVertical="true"
            tools:ignore="RelativeOverlap"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextRating"
            android:inputType="number"
            android:textSize="24sp"
            android:gravity="center_vertical|end"
            android:hint="@string/info_table_91"
            android:autofillHints=""
            tools:targetApi="o"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
            android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
            tools:ignore="RelativeOverlap"/>
</RelativeLayout>
